<resources>
    <string name="app_name">AppAncona</string>
    <string name="desc_logo">logo applicazione</string>
    <string name="mappa">Vedi Percorso</string>
    <string name="google_maps_key">AIzaSyCwzG2OGVBzuo6YNJTuBSIy-d1NFHtvAXA</string>
    <!-- LABEL ICONE   -->
    <string name="label_icona1">Punti di interesse</string>
    <string name="label_icona2">Ristorazione</string>
    <string name="label_icona3">Pernottamento</string>
    <string name="label_icona4">Percorsi</string>
    <string name="label_icona5">Servizi</string>
    <string name="label_icona6">La Città</string>
    <!-- LABEL MENU   -->
    <string name="aboutus">Applicazione Android volta all \'ausilio del turista della città di Ancona.L\'app supporta l\'utente nella scelta dei punti d\'interesse da visitare,dei ristoranti in cui mangiare, degli hotel in cui alloggiare e dei negozi in cui trovare le tipicità del luogo. Inoltre da indicazioni sui servizi primari disponibili in città. Il progetto è stato realizzato da Roberto Tiburzi ed Abdel Ali Qochih, studenti di Ingegneria Informatica e dell\'Automazione presso l\'Università Politecnica delle Marche, con la supervisione di Luca Virgili dottorando della medesima università</string>
    <!-- LABEL RICERCA   -->
    <string name="distanza">Distanza massima</string>
    <string name="categoria">Categoria</string>
    <string name="ricerca">Cerca</string>
    <string name="pre">Prezzo</string>

    <!-- DESCRIZIONE ICONE   -->
    <string name="desc_icona1">icona 1</string>
    <string name="desc_icona2">icona 2</string>
    <string name="desc_icona3">icona 3</string>
    <string name="desc_icona4">icona 4</string>
    <string name="desc_icona5">icona 5</string>
    <string name="desc_icona6">icona 6</string>

    <!--LABEL PUNTI D'INTERESSE -->
    <string name="label_punti1">Monumenti Storici</string>
    <string name="label_punti2">Parchi e Paesaggi</string>
    <string name="label_punti3">Monumenti Religiosi</string>
    <string name="label_punti4">Luoghi Culturali</string>

    <!--DESCRIZIONI PUNTI D'INTERESSE -->
    <string name="desc_punti1">Monumenti Storici</string>
    <string name="desc_punti2">Parchi e Aree Verdi</string>
    <string name="desc_punti3">Monumenti Religiosi</string>
    <string name="desc_punti4">Luoghi Culturali</string>

    <!--LABEL CITTA' -->
    <string name="label_citta1">Come Arrivarci</string>
    <string name="label_citta2">Come Visitarla</string>
    <string name="label_citta3">Negozi Tipicità</string>
    <string name="label_citta4">Tradizioni</string>
    <!--LABEL RISTORAZIONE' -->
    <string name="indirizzo">Indirizzo:</string>
    <string name="email">E-mail:</string>
    <string name="orari">Orari:</string>
    <string name="giornochius">Giorno Chiusura:</string>
    <string name="ncoperti">Numero Coperti:</string>
    <string name="prezzo">Prezzo Medio:</string>
    <string name="telefono">Telefono:</string>
    <string name="sito">Sito Internet:</string>
    <string name="parcheggio">Parcheggio:</string>


    <!--DESCRIZIONI PUNTI D'INTERESSE -->
    <string name="desc_citta1">icona 1</string>
    <string name="desc_citta2">icona 2</string>
    <string name="desc_citta3">icona 1</string>
    <string name="desc_citta4">icona 4</string>
    <!--DESCRIZIONI COME ARRIVARCI' -->
    <string name="apiedi">La città è visitabile a piedi,con numerose zone chiuse al traffico ed accessibili solo ai pedoni.</string>
    <string name="autobus">La città è servita da numerose linee urbane che collegono in maniera efficiente sie le zone centrali che quelle periferiche.</string>
    <string name="auto">La città è visitabile in auto  grazie ad un sistema stradale ben strutturato con una buona viabilità.</string>
    <!--DESCRIZIONI TRADIZIONI' -->
    <string name="titolo1">Festa di San Ciriaco</string>
    <string name="titolo2">Festa del Mare</string>
    <string name="titolo3">Fiera degli Archi</string>
    <string name="testo1">Durante la festa di San Ciriaco, antichissima festa patronale (pare risalente al XIV secolo), che si celebra la prima settimana di maggio, i fedeli della città ascendono al Duomo per onorare il corpo del Martire, mentre la città si riempie di bancarelle..</string>
    <string name="testo2">La Festa del Mare si tiene nella prima domenica di settembre e consiste in una animatissima processione di centinaia di imbarcazioni che dal porto si recano al largo per onorare i caduti del mare con una cerimonia religiosa. A questa ricorrenza si legano annualmente moltissimi eventi correlati, la fiera nel rione marinaro e, a conclusione di tutto un grande spettacolo di fuochi artificiali sull\'acqua.</string>
    <string name="testo3">Un importante appuntamento per gli abitanti del quartiere e di tutta la città è la fiera degli Archi. Si racconta che durava tre giorni, si svolgeva verso il 20 di Agosto e comprendeva sempre la domenica..</string>
</resources>
