<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineO1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.0"/>
    <android.support.constraint.Guideline
        android:id="@+id/guidelineO2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.1"/>
    <android.support.constraint.Guideline
        android:id="@+id/guidelineO3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.33"/>
    <android.support.constraint.Guideline
        android:id="@+id/guidelineO4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.43"/>
    <android.support.constraint.Guideline
        android:id="@+id/guidelineO5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.66"/>
    <android.support.constraint.Guideline
        android:id="@+id/guidelineO6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.76"/>
    <android.support.constraint.Guideline
        android:id="@+id/guidelineO7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="1.0"/>

    <TextView
        android:id="@+id/titolo1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/titolo1"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/guidelineO1"
        app:layout_constraintBottom_toBottomOf="@id/guidelineO2"/>
    <TextView
        android:id="@+id/testo1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/testo1"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineO2"
        app:layout_constraintBottom_toBottomOf="@id/guidelineO3"/>
    <TextView
        android:id="@+id/titolo2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/titolo2"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/guidelineO3"
        app:layout_constraintBottom_toBottomOf="@id/guidelineO4"/>
    <TextView
        android:id="@+id/testo2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/testo2"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineO4"
        app:layout_constraintBottom_toBottomOf="@id/guidelineO5"/>
    <TextView
        android:id="@+id/titolo3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/titolo3"

        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/guidelineO5"
        app:layout_constraintBottom_toBottomOf="@id/guidelineO6"/>
    <TextView
        android:id="@+id/testo3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/testo3"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineO6"
        app:layout_constraintBottom_toBottomOf="@id/guidelineO7"/>

</android.support.constraint.ConstraintLayout>