<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/sfondo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:contentDescription="@string/desc_punti1"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/guideline1" />



    <TextView
        android:id="@+id/descr"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:paddingLeft="5dp"
        android:contentDescription="@string/desc_punti1"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        android:scrollbars="vertical"/>

    <TextView
        android:id="@+id/labelorari"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:contentDescription="@string/orari"
        android:background="@color/colorPrimary"
        android:text="@string/orari"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="@id/guideline4"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV1"
        app:layout_constraintRight_toRightOf="@id/guidelineV2"/>

    <TextView
        android:id="@+id/orari"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:contentDescription="@string/desc_punti1"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV1"
        app:layout_constraintRight_toRightOf="@id/guidelineV2"/>
    <TextView
        android:id="@+id/labelindirizzo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:contentDescription="@string/indirizzo"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:text="@string/indirizzo"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="@id/guideline4"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV2"
        app:layout_constraintRight_toRightOf="@id/guidelineV3"/>

    <TextView
        android:id="@+id/indirizzo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/indirizzo"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV2"
        app:layout_constraintRight_toRightOf="@id/guidelineV3" />

    <TextView
        android:id="@+id/labelgiochius"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:contentDescription="@string/giornochius"
        android:text="@string/giornochius"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/guideline7"
        app:layout_constraintTop_toTopOf="@id/guideline6"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV1"
        app:layout_constraintRight_toRightOf="@id/guidelineV2"/>

    <TextView
        android:id="@+id/giochius"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:contentDescription="@string/desc_punti1"
        app:layout_constraintBottom_toBottomOf="@id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline7"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV1"
        app:layout_constraintRight_toRightOf="@id/guidelineV2"/>

    <TextView
        android:id="@+id/labelsito"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:contentDescription="@string/sito"
        android:text="@string/sito"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline7"
        app:layout_constraintTop_toTopOf="@id/guideline6"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV2"
        app:layout_constraintRight_toRightOf="@id/guidelineV3"/>

    <TextView
        android:id="@+id/sito"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/ncoperti"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline8"
        app:layout_constraintTop_toTopOf="@id/guideline7"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV2"
        app:layout_constraintRight_toRightOf="@id/guidelineV3" />

    <TextView
        android:id="@+id/labelprezzo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:contentDescription="@string/prezzo"
        android:text="@string/prezzo"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"
        app:layout_constraintTop_toTopOf="@id/guideline8"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV1"
        app:layout_constraintRight_toRightOf="@id/guidelineV2"/>

    <TextView
        android:id="@+id/prezzo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:contentDescription="@string/prezzo"
        app:layout_constraintBottom_toBottomOf="@id/guideline10"
        app:layout_constraintTop_toTopOf="@id/guideline9"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV1"
        app:layout_constraintRight_toRightOf="@id/guidelineV2"/>

    <TextView
        android:id="@+id/labeltel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:contentDescription="@string/telefono"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:text="@string/telefono"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"
        app:layout_constraintTop_toTopOf="@id/guideline8"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV2"
        app:layout_constraintRight_toRightOf="@id/guidelineV3"/>

    <TextView
        android:id="@+id/tel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/telefono"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline10"
        app:layout_constraintTop_toTopOf="@id/guideline9"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV2"
        app:layout_constraintRight_toRightOf="@id/guidelineV3" />


    <Button
        android:id="@+id/mappa"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/mappa"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline11"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.85" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.0"/>
    <android.support.constraint.Guideline
        android:id="@+id/guidelineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline
        android:id="@+id/guidelineV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="1"/>


</android.support.constraint.ConstraintLayout>